apps/dex/base/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: dex-policy
  namespace: dex
spec:
  selector:
    matchLabels:
      app: dex-auth
  action: ALLOW
  rules:
    - when:
        - key: request.headers[x-envoy-external-address]
          values:
            - "94.62.74.120" # Diego
      to:
        - operation:
            methods: ["GET", "POST", "OPTIONS", "DELETE", "PATCH"]
    - from:
      - source:
          namespaces: ["dex", "monitoring"]
      to:
      - operation:
          methods: ["GET", "POST", "OPTIONS", "DELETE", "PATCH"]
